--- a/ProjetoETLsatisfacao_clientela.ipynb
+++ b/ProjetoETLsatisfacao_clientela.ipynb
@@ -59,7 +59,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Apenas para ter uma ideia do que se trata o DataFrame, mostrarei quais são os tipos de dados presentes em cada coluna e posteriormente, as informações dos primeiros 5 clientes"
+        "Apenas para ter uma ideia do que se trata o DataFrame, mostrarei as informações dos primeiros 5 clientes"
       ],
       "metadata": {
         "id": "ca19uhL-b4zJ"
@@ -412,7 +412,6 @@
         "* Criação de colunas derivadas.\n",
         "* Verificação de dados faltantes ou inconsistentes\n",
         "* Filtragem de outliers ou dados incorretos.\n",
-        "* Cálculo de indicadores (exemplo: média por região).\n"
       ],
       "metadata": {
         "id": "VkpF2-82fjBj"
